--- a/table-passwd.5
+++ b/table-passwd.5
@@ -15,7 +15,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd $Mdocdate: February 4 2014 $
+.Dd $Mdocdate: April 4 2024 $
 .Dt TABLE_PASSWD 5
 .Os
 .Sh NAME
@@ -76,6 +76,7 @@ format, extra fields after the last shell field are allowed (and ignored).
 The first version of
 .Nm
 was written in 2013.
+It was converted to the stdio table protocol in 2024.
 .Sh AUTHORS
 .An -nosplit
 .Nm
@@ -83,3 +84,5 @@ was intially written by
 .An Gilles Chehade Aq Mt gilles@poolp.org
 and further improved by
 .An Joerg Jung Aq Mt jung@openbsd.org .
+The conversion to the stdio table protocol was done by
+.An Omar Polo Aq Mt op@openbsd.org .
