fix typo in man page

--- a/table-passwd.5
+++ b/table-passwd.5
@@ -80,7 +80,7 @@ It was converted to the stdio table protocol in 2024.
 .Sh AUTHORS
 .An -nosplit
 .Nm
-was intially written by
+was initially written by
 .An Gilles Chehade Aq Mt gilles@poolp.org
 and further improved by
 .An Joerg Jung Aq Mt jung@openbsd.org .
